crates/toml_edit/tests/snapshots/invalid/local-date/day-1digit.stderr
TOML parse error at line 1, column 15
  |
1 | foo = 1997-09-9
  |               ^
invalid date-time
